--- a/hopitall/templates/appointements.html
+++ b/hopitall/templates/appointements.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
+<style>
+    h1{
+        text-align: center;
+    }
+    table {
+border-collapse:collapse;
+width:100%;
+max-width:700px;
+min-width:400px;
+margin-left: auto;
+margin-right: auto;
+text-align:center;
+}
+    
+
+caption {
+caption-side:bottom;
+font-weight:bold;
+font-style:italic;
+margin:4px;
+}
+
+table,th, td {
+border: 1px solid gray;
+}
+
+th, td {
+height: 24px;
+padding:4px;
+vertical-align:middle;
+}
+
+th {
+background-color: aqua;
+}
+
+.rowtitle {
+background: #9CF;
+font-weight:bold;
+}
+    
+</style>
 <h1>Appointements</h1>
 <table>
     <tr>
         <th>Name</th>
-        <th>email</th>
-        <th>date</th>
+        <th>Email</th>
+        <th>Date</th>
         <th>Departement</th>
         <th>Message</th>    
         
@@ -12,11 +54,11 @@
 
 {% for formulair in appointement %}
     <tr>
-        <th>{{formulair.name}}</th>
-        <th>{{formulair.email}}</th>
-        <th>{{formulair.date}}</th>
-        <th>{{formulair.departement}}</th>
-        <th>{{formulair.Message}}</th>    
+        <td>{{formulair.name}}</td>
+        <td>{{formulair.email}}</td>
+        <td>{{formulair.date}}</td>
+        <td>{{formulair.departement}}</td>
+        <td>{{formulair.message}}</td>    
     </tr>
 
 {% endfor %}
