--- a/hopitall/templates/appointements.html
+++ b/hopitall/templates/appointements.html
@@ -3,46 +3,55 @@
     h1{
         text-align: center;
     }
-    table {
-border-collapse:collapse;
-width:100%;
-max-width:700px;
-min-width:400px;
-margin-left: auto;
-margin-right: auto;
-text-align:center;
-}
-    
-
-caption {
-caption-side:bottom;
-font-weight:bold;
-font-style:italic;
-margin:4px;
+   html,
+body {
+	height: 100%;
 }
 
-table,th, td {
-border: 1px solid gray;
+body {
+	margin: 0;
+	background: linear-gradient(45deg, #49a09d, #5f2c82);
+	font-family: sans-serif;
+	font-weight: 100;
 }
 
-th, td {
-height: 24px;
-padding:4px;
-vertical-align:middle;
+.container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+table {
+    text-align: center;
+	width: 800px;
+	border-collapse: collapse;
+	overflow: hidden;
+	box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
+th,
+td {
+    text-align: center;
+    vertical-align:middle;
+	padding: 15px;
+	background-color: rgba(255,255,255,0.2);
+	color: #fff;
 }
 
 th {
-background-color: aqua;
+	text-align: center;
 }
 
-.rowtitle {
-background: #9CF;
-font-weight:bold;
-}
+
+
+
     
 </style>
 <h1>Appointements</h1>
+<div class="container">
 <table>
+    <thead>
     <tr>
         <th>Name</th>
         <th>Email</th>
@@ -51,7 +60,8 @@ font-weight:bold;
         <th>Message</th>    
         
     </tr>
-
+    </thead>
+    <tbody>
 {% for formulair in appointement %}
     <tr>
         <td>{{formulair.name}}</td>
@@ -62,5 +72,7 @@ font-weight:bold;
     </tr>
 
 {% endfor %}
+</tbody>
 </table>
+</div>
 </html>
